--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -1,399 +1,30 @@
 .productList {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
+  background-color: hsl(0, 0%, 100%);
 }
 
-.productList .div {
+.productList .inner{}
+.productList .inner .addBtnForm{
+  display: flex; justify-content: flex-end; align-items: center;
+}
+.productList .inner .addBtnForm button{
+  width: 100px; height: 50px; padding: 10px;
+  border-radius: 20px;
   background-color: #ffffff;
-  height: 1622.69px;
-  overflow: hidden;
-  position: relative;
-  width: 1440px;
+  cursor: pointer;
 }
 
 .productList .productWrap {
-  height: 1037px;
-  left: 119px;
-  overflow: hidden;
-  position: absolute;
-  top: 586px;
-  width: 1212px;
-}
-
-.productList .product {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 900px;
-  position: absolute;
-  top: 740px;
-  width: 273px;
-}
-
-.productList .image {
   background-color: #ffffff;
-  height: 168px;
-  left: 32px;
-  position: absolute;
-  top: 19px;
-  width: 208px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
-.productList .textWrapper {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 13.3px;
-  font-weight: 400;
-  left: 36px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 37px;
-  white-space: nowrap;
-  width: 139px;
+.productList .productWrap .link{
+  max-width: 25%;
 }
-
-.productList .infoBox {
-  background-color: #ffffff;
-  height: 78px;
-  left: 32px;
-  position: absolute;
-  top: 201px;
-  width: 208px;
-}
-
-.productList .productName {
-  background-color: #eeeeee;
-  height: 29px;
-  left: 18px;
-  position: absolute;
-  top: 3px;
-  width: 171px;
-}
-
-.productList .textWrapper2 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 13.3px;
-  font-weight: 400;
-  left: 31px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 5px;
-  width: 109px;
-}
-
-.productList .productInfo {
-  background-color: #eeeeee;
-  height: 26px;
-  left: 18px;
-  position: absolute;
-  top: 45px;
-  width: 171px;
-}
-
-.productList .textWrapper3 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 13.3px;
-  font-weight: 400;
-  left: 43px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 5px;
-  width: 85px;
-}
-
-.productList .product2 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 589px;
-  position: absolute;
-  top: 740px;
-  width: 273px;
-}
-
-.productList .product3 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 289px;
-  position: absolute;
-  top: 740px;
-  width: 273px;
-}
-
-.productList .divWrapper {
-  background-color: #ffffff;
-  height: 168px;
-  left: 33px;
-  position: absolute;
-  top: 19px;
-  width: 208px;
-}
-
-.productList .infoBox2 {
-  background-color: #ffffff;
-  height: 78px;
-  left: 33px;
-  position: absolute;
-  top: 201px;
-  width: 208px;
-}
-
-.productList .product4 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: -10px;
-  position: absolute;
-  top: 740px;
-  width: 273px;
-}
-
-.productList .product5 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 900px;
-  position: absolute;
-  top: 403px;
-  width: 273px;
-}
-
-.productList .product6 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 589px;
-  position: absolute;
-  top: 403px;
-  width: 273px;
-}
-.productList .product7 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 289px;
-  position: absolute;
-  top: 403px;
-  width: 273px;
-}
-
-.productList .product8 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: -10px;
-  position: absolute;
-  top: 403px;
-  width: 273px;
-}
-
-.productList .product9 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 900px;
-  position: absolute;
-  top: 0;
-  width: 273px;
-}
-
-.productList .product10 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 589px;
-  position: absolute;
-  top: 0;
-  width: 273px;
-}
-
-.productList .product11 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: 289px;
-  position: absolute;
-  top: 0;
-  width: 273px;
-}
-
-.productList .product12 {
-  background-color: #eeeeee;
-  height: 297px;
-  left: -10px;
-  position: absolute;
-  top: 0;
-  width: 273px;
-}
-
-.productList .infoBox3 {
-  background-color: #ffffff;
-  height: 78px;
-  left: 38px;
-  position: absolute;
-  top: 201px;
-  width: 208px;
-}
-
-.productList .image2 {
-  background-color: #ffffff;
-  height: 168px;
-  left: 38px;
-  position: absolute;
-  top: 19px;
-  width: 208px;
-}
-
-.productList .detail {
-  background-color: #eeeeee;
-  height: 118px;
-  left: 119px;
-  position: absolute;
-  top: 397px;
-  width: 1196px;
-}
-
-.productList .divWrapper2 {
-  background-color: #ffffff;
-  height: 72px;
-  left: 19px;
-  position: absolute;
-  top: 21px;
-  width: 185px;
-}
-
-.productList .textWrapper4 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 39.9px;
-  font-weight: 400;
-  left: 26px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 11px;
-  width: 133px;
-}
-.productList .divWrapper3 {
-  background-color: #ffffff;
-  height: 72px;
-  left: 512px;
-  position: absolute;
-  top: 21px;
-  width: 185px;
-}
-
-.productList .textWrapper5 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 39.9px;
-  font-weight: 400;
-  left: 40px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 11px;
-}
-
-.productList .divWrapper4 {
-  background-color: #ffffff;
-  height: 72px;
-  left: 751px;
-  position: absolute;
-  top: 21px;
-  width: 185px;
-}
-
-.productList .divWrapper5 {
-  background-color: #ffffff;
-  height: 72px;
-  left: 990px;
-  position: absolute;
-  top: 23px;
-  width: 185px;
-}
-
-.productList .divWrapper6 {
-  background-color: #ffffff;
-  height: 72px;
-  left: 265px;
-  position: absolute;
-  top: 21px;
-  width: 185px;
-}
-
-.productList .category {
-  background-color: #eeeeee;
-  height: 118px;
-  left: 119px;
-  position: absolute;
-  top: 233px;
-  width: 1194px;
-}
-
-.productList .textWrapper6 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 39.9px;
-  font-weight: 400;
-  left: 7px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 10px;
-}
-
-.productList .nav {
-  background-color: #eeeeee;
-  height: 118px;
-  left: 115px;
-  position: absolute;
-  top: 69px;
-  width: 1196px;
-}
-
-.productList .user {
-  background-color: #ffffff;
-  height: 62px;
-  left: 958px;
-  position: absolute;
-  top: 31px;
-  width: 218px;
-}
-
-.productList .textWrapper7 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 39.9px;
-  font-weight: 400;
-  left: 35px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 6px;
-  width: 183px;
-}
-
-.productList .logo {
-  background-color: #ffffff;
-  height: 72px;
-  left: 19px;
-  overflow: hidden;
-  position: absolute;
-  top: 21px;
-  width: 185px;
-}
-
-.productList .textWrapper8 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 39.9px;
-  font-weight: 400;
-  left: 58px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 9px;
-  width: 127px;
+.productList .productWrap .link  .product{
+  max-width: 240px;
+  width: 100%;
 }
