productList.css에서 .link width:25%로 수정

--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -23,6 +23,7 @@
 
 .productList .productWrap .link{
   max-width: 25%;
+  width: 25%;
 }
 .productList .productWrap .link  .product{
   max-width: 240px;
