--- a/src/css/productAdd.css
+++ b/src/css/productAdd.css
@@ -75,7 +75,7 @@
   margin-left: 100px;
   background-color: #eee;
 }
-.productAdd .inner .wrap.img .boxWrap .addImg.firstImg {
+.productAdd .inner .wrap.img .boxWrap .addImg.1 {
   margin-left: 0;
 }
 .productAdd .inner .wrap.img .addImg:hover {
