--- a/src/css/paySuccess.css
+++ b/src/css/paySuccess.css
@@ -1,4 +1,3 @@
-
 .paySuccess {
   background-color: #ffffff;
   display: flex;
@@ -51,7 +50,7 @@
 .paySuccess .successMessage {
   color: #aa0000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.4px;
+  font-size: 30px;
   font-weight: 400;
   left: 30px;
   letter-spacing: 0;
@@ -71,23 +70,20 @@
   width: 950px;
 }
 
-.paySuccess .textWrapper2 {
+.paySuccess .payInfo {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.4px;
+  font-size: 30px;
   font-weight: 400;
-  left: 381px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 38px;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 
-.paySuccess .textWrapper3 {
+.paySuccess .productName {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 400;
   left: 55px;
   letter-spacing: 0;
@@ -97,7 +93,7 @@
   top: 170px;
 }
 
-.paySuccess .textWrapper4 {
+.paySuccess .howToPay {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 37px;
@@ -110,7 +106,7 @@
   top: 659px;
 }
 
-.paySuccess .textWrapper5 {
+.paySuccess .howToPayPrint {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 37px;
@@ -123,7 +119,7 @@
   top: 659px;
 }
 
-.paySuccess .textWrapper6 {
+.paySuccess .paySum {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 37px;
@@ -136,7 +132,7 @@
   top: 740px;
 }
 
-.paySuccess .textWrapper7 {
+.paySuccess .paySumPrint {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 37px;
@@ -149,7 +145,7 @@
   top: 740px;
 }
 
-.paySuccess .textWrapper8 {
+.paySuccess .orderProduct1 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 35px;
@@ -162,7 +158,7 @@
   top: 170px;
 }
 
-.paySuccess .textWrapper9 {
+.paySuccess .orderProduct2 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 37px;
@@ -175,7 +171,7 @@
   top: 330px;
 }
 
-.paySuccess .textWrapper10 {
+.paySuccess .orderProduct3 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 37px;
@@ -199,19 +195,6 @@
   position: absolute;
   text-align: center;
   top: 245px;
-}
-
-.paySuccess .textWrapper11 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 29.6px;
-  font-weight: 400;
-  left: 46px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 859px;
 }
 
 .paySuccess .optionInfo2 {
@@ -240,20 +223,13 @@
   top: 562px;
 }
 
-.paySuccess .vector {
-  height: 4px;
-  left: 56px;
-  position: absolute;
-  top: 322px;
-  width: 926px;
-}
-
-.paySuccess .img {
-  height: 2px;
-  left: 57px;
-  position: absolute;
-  top: 1031px;
-  width: 925px;
+.paySuccess .readMe {
+  color: #00000070;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 22px;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
 }
 
 .paySuccess .toHome {
