--- a/src/css/findPassword.css
+++ b/src/css/findPassword.css
@@ -30,7 +30,7 @@
 
 .findPassword .findPasswordBox {
   background-color: #eeeeee;
-  height: 670px;
+  height: 870px;
   left: 278px;
   position: absolute;
   top: 169px;
@@ -94,12 +94,45 @@
   width: 573px;
 }
 
+.findPassword .inputNum {
+  background-color: #eeeeee;
+  height: 93px;
+  left: 30px;
+  position: absolute;
+  top: 370px;
+  width: 756px;
+}
+
+.findPassword .inputNumWrapper {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 27.6px;
+  font-weight: 400;
+  height: 58px;
+  left: 50px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 16px;
+  width: 492px;
+}
+
+.findPassword .inputNumButton {
+  background-color: #eeeeee;
+  height: 58px;
+  left: 585px;
+  position: absolute;
+  top: 16px;
+  width: 181px;
+}
+
 .findPassword .buttonBox {
   background-color: #ffffff;
   height: 173px;
   left: 11px;
   position: absolute;
-  top: 410px;
+  top: 610px;
   width: 879px;
 }
 
