--- a/src/css/userEdit.css
+++ b/src/css/userEdit.css
@@ -42,6 +42,19 @@
   width: 359px;
 }
 
+.userEdit .checkBox {
+  position: absolute;
+  top : -20px;
+  left: 200px;
+}
+
+.userEdit .checkPass{
+  position: absolute;
+  top : 13px;
+  left: 140px;
+}
+
+
 .userEdit .input {
   background-color: #ffffff;
   height: 43px;
