--- a/src/css/passwordEdit.css
+++ b/src/css/passwordEdit.css
@@ -1,4 +1,4 @@
-.findPassword {
+.changePassword {
   background-color: #ffffff;
   display: flex;
   flex-direction: row;
@@ -6,14 +6,14 @@
   width: 100%;
 }
 
-.findPassword .div {
+.changePassword .div {
   background-color: #ffffff;
   height: 1024px;
   position: relative;
   width: 1440px;
 }
 
-.findPassword .textWrapper {
+.changePassword .textWrapper {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 44.1px;
@@ -28,16 +28,16 @@
   width: 633px;
 }
 
-.findPassword .findPasswordBox {
+.changePassword .changePasswordBox {
   background-color: #eeeeee;
-  height: 870px;
+  height: 670px;
   left: 278px;
   position: absolute;
   top: 169px;
   width: 905px;
 }
 
-.findPassword .inputBox {
+.changePassword .inputBox {
   background-color: #ffffff;
   height: 312px;
   left: 14px;
@@ -46,7 +46,7 @@
   width: 876px;
 }
 
-.findPassword .inputUserid {
+.changePassword .inputPassword {
   background-color: #eeeeee;
   height: 101px;
   left: 30px;
@@ -55,7 +55,7 @@
   width: 815px;
 }
 
-.findPassword .textWrapper2 {
+.changePassword .textWrapper2 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 29.8px;
@@ -70,7 +70,7 @@
   width: 573px;
 }
 
-.findPassword .inputUserEmail {
+.changePassword .inputPasswordCheck {
   background-color: #eeeeee;
   height: 101px;
   left: 30px;
@@ -79,7 +79,7 @@
   width: 815px;
 }
 
-.findPassword .textWrapper3 {
+.changePassword .textWrapper3 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 29.8px;
@@ -94,16 +94,7 @@
   width: 573px;
 }
 
-.findPassword .emailButton {
-  background-color: #eeeeee;
-  height: 62px;
-  left: 715px;
-  position: absolute;
-  top: 17px;
-  width: 81px;
-}
-
-.findPassword .inputNum {
+.changePassword .inputNum {
   background-color: #eeeeee;
   height: 93px;
   left: 30px;
@@ -112,7 +103,7 @@
   width: 756px;
 }
 
-.findPassword .inputNumWrapper {
+.changePassword .inputNumWrapper {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 27.6px;
@@ -127,7 +118,7 @@
   width: 492px;
 }
 
-.findPassword .inputNumButton {
+.changePassword .inputNumButton {
   background-color: #eeeeee;
   height: 58px;
   left: 585px;
@@ -136,16 +127,16 @@
   width: 181px;
 }
 
-.findPassword .buttonBox {
+.changePassword .buttonBox {
   background-color: #ffffff;
   height: 173px;
   left: 11px;
   position: absolute;
-  top: 610px;
+  top: 450px;
   width: 879px;
 }
 
-.findPassword .LinkButton {
+.changePassword .LinkButton {
   background-color: #eeeeee;
   height: 101px;
   left: 51px;
@@ -154,7 +145,7 @@
   width: 302px;
 }
 
-.findPassword .textWrapper4 {
+.changePassword .textWrapper4 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 29.8px;
@@ -169,7 +160,7 @@
   width: 145px;
 }
 
-.findPassword .cancelButton {
+.changePassword .cancelButton {
   background-color: #eeeeee;
   height: 101px;
   left: 551px;
@@ -178,7 +169,7 @@
   width: 248px;
 }
 
-.findPassword .textWrapper5 {
+.changePassword .textWrapper5 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 29.8px;
