--- a/src/css/productReview.css
+++ b/src/css/productReview.css
@@ -22,9 +22,9 @@
 
 .productInfoReview .reviewBox {
   background-color: #eeeeee;
-  height: 992px;
+  height: 527px;
   left: 2px;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: absolute;
   top: 171px;
   width: 1328px;
@@ -242,8 +242,9 @@
 
 .productInfoReview .infoSelect {
   background-color: #ffffff;
-  height: 161px;
+  height: 159px;
   left: 2px;
+  overflow: hidden;
   position: absolute;
   top: 0;
   width: 1328px;
